--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
-    "framer-motion": "^10.16.16",
+    "framer-motion": "^10.18.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "matter-js": "^0.20.0",
@@ -66,6 +66,7 @@
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.159.0",
