--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-icons/all-files": "^4.1.0",
     "@react-three/fiber": "^8.15.16",
+    "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.56.2",
     "@types/three": "^0.176.0",
     "@vercel/analytics": "^1.5.0",
@@ -54,7 +55,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "matter-js": "^0.20.0",
-    "motion": "^12.9.4",
+    "motion": "^12.23.9",
     "next-themes": "^0.3.0",
     "ogl": "^1.0.11",
     "react": "^18.3.1",
