--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^10.18.0",
     "input-otp": "^1.2.4",
+    "lenis": "^1.3.11",
     "lucide-react": "^0.462.0",
     "matter-js": "^0.20.0",
     "motion": "^12.23.9",
