--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-icons/all-files": "^4.1.0",
     "@react-three/fiber": "^8.15.16",
+    "@react-three/postprocessing": "^2.16.2",
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.56.2",
     "@types/three": "^0.176.0",
@@ -59,6 +60,7 @@
     "motion": "^12.23.9",
     "next-themes": "^0.3.0",
     "ogl": "^1.0.11",
+    "postprocessing": "^6.35.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
